--- a/9.Quantidade-de-respiradores-existentes-por-municipio/Respiradores_Municipios.ipynb
+++ b/9.Quantidade-de-respiradores-existentes-por-municipio/Respiradores_Municipios.ipynb
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "ystQ5QaFvhkr",
         "colab_type": "code",
-        "outputId": "5a9caa07-76ba-453e-b0d5-124f47164281",
+        "outputId": "0e6066e0-5ee9-4a15-aa0a-1d52d8dff65b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -84,10 +84,10 @@
       },
       "source": [
         "respiradores = pd.read_csv(\"https://raw.githubusercontent.com/fraterno20/fraterno20-python-notebooks/master/Dataset/Dados-Primarios/respiradores_municipio.csv\", sep = \";\", encoding = \"iso-8859-1\")\n",
-        "respiradores.columns = [\"city\",\"quantidade_existente\",\"quantidade_em_uso\",\"estab_c_eq_sus\"]\n",
+        "respiradores.columns = [\"city\",\"quantidade_existente\",\"quantidade_em_uso\",\"n_estabelecimentos_dispondo\"]\n",
         "respiradores.head(2)"
       ],
-      "execution_count": 2,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -114,7 +114,7 @@
               "      <th>city</th>\n",
               "      <th>quantidade_existente</th>\n",
               "      <th>quantidade_em_uso</th>\n",
-              "      <th>estab_c_eq_sus</th>\n",
+              "      <th>n_estabelecimentos_dispondo</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -137,9 +137,9 @@
               "</div>"
             ],
             "text/plain": [
-              "                             city  ... estab_c_eq_sus\n",
-              "0    110001 Alta Floresta D'Oeste  ...              -\n",
-              "1  110037 Alto Alegre dos Parecis  ...              -\n",
+              "                             city  ... n_estabelecimentos_dispondo\n",
+              "0    110001 Alta Floresta D'Oeste  ...                           -\n",
+              "1  110037 Alto Alegre dos Parecis  ...                           -\n",
               "\n",
               "[2 rows x 4 columns]"
             ]
@@ -147,7 +147,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 12
         }
       ]
     },
@@ -166,7 +166,7 @@
       "metadata": {
         "id": "zysl_XG6vwF0",
         "colab_type": "code",
-        "outputId": "403845b8-9c11-4b56-c797-8864d6de42d4",
+        "outputId": "c1086f4a-1746-47b6-c69c-45a2eb2027d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -178,7 +178,7 @@
         "city_lat_long.rename(columns = {\"nome\":\"city\"},inplace = True)\n",
         "city_lat_long.head(2)"
       ],
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -239,7 +239,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 13
         }
       ]
     },
@@ -258,7 +258,7 @@
       "metadata": {
         "id": "HurIxA8KwvSB",
         "colab_type": "code",
-        "outputId": "9e4b209f-7203-4a0d-ce86-2d5e88ffd198",
+        "outputId": "ab8a096f-b880-461e-f47f-2118b2c02147",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -270,7 +270,7 @@
         "data_ibge.rename(columns = {\"Nome_Município\":\"city\",\"Nome_UF\":\"state\",\"UF\":\"codigo_uf\",\"Código Município Completo\":\"codigo_ibge\"},inplace = True)\n",
         "data_ibge.head(2)"
       ],
-      "execution_count": 4,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -328,7 +328,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 14
         }
       ]
     },
@@ -357,7 +357,7 @@
       "metadata": {
         "id": "nNA__eDlxEa2",
         "colab_type": "code",
-        "outputId": "3c00628e-0364-4435-af4c-5802e343936c",
+        "outputId": "c03dabee-4749-475d-ca27-40810caedb47",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -367,7 +367,7 @@
         "city_lat_long = city_lat_long.merge(data_ibge, on = [\"city\",\"codigo_ibge\",\"codigo_uf\"],sort = \"city\")\n",
         "city_lat_long.head(2)"
       ],
-      "execution_count": 5,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -433,7 +433,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 15
         }
       ]
     },
@@ -452,7 +452,7 @@
       "metadata": {
         "id": "VYaMJeIxxSEW",
         "colab_type": "code",
-        "outputId": "5f71c6ca-6999-433b-aff1-941c787443c2",
+        "outputId": "6e1ff271-d63c-47c5-afca-f0b42d87e01d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -464,7 +464,7 @@
         "respiradores.drop(columns=[\"city\"], inplace = True)\n",
         "respiradores.head(2)"
       ],
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +490,7 @@
               "      <th></th>\n",
               "      <th>quantidade_existente</th>\n",
               "      <th>quantidade_em_uso</th>\n",
-              "      <th>estab_c_eq_sus</th>\n",
+              "      <th>n_estabelecimentos_dispondo</th>\n",
               "      <th>codigo_ibge</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -514,15 +514,17 @@
               "</div>"
             ],
             "text/plain": [
-              "  quantidade_existente quantidade_em_uso estab_c_eq_sus codigo_ibge\n",
-              "0                    -                 -              -      110001\n",
-              "1                    -                 -              -      110037"
+              "  quantidade_existente  ... codigo_ibge\n",
+              "0                    -  ...      110001\n",
+              "1                    -  ...      110037\n",
+              "\n",
+              "[2 rows x 4 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 16
         }
       ]
     },
@@ -541,7 +543,7 @@
       "metadata": {
         "id": "Py-SyBds2Gds",
         "colab_type": "code",
-        "outputId": "b716b971-e650-4c1e-9673-4e702bb37439",
+        "outputId": "c50911fd-3d6e-4631-adca-a405bbe20bb0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -551,7 +553,7 @@
         "city_lat_long[\"codigo_ibge\"] = city_lat_long[\"codigo_ibge\"].map(lambda x: str(x)[:-1])\n",
         "city_lat_long.head(2)"
       ],
-      "execution_count": 7,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -617,7 +619,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 17
         }
       ]
     },
@@ -636,10 +638,10 @@
       "metadata": {
         "id": "5pPwGVstzsRE",
         "colab_type": "code",
-        "outputId": "989d8aa1-8682-429b-be62-14ee6e6529a7",
+        "outputId": "a96ca535-c6fd-4abe-e127-24340852434b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 107
+          "height": 124
         }
       },
       "source": [
@@ -647,7 +649,7 @@
         "respiradores.dropna(subset=[\"state\"], inplace = True)\n",
         "respiradores.head(2)"
       ],
-      "execution_count": 8,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -673,7 +675,7 @@
               "      <th></th>\n",
               "      <th>quantidade_existente</th>\n",
               "      <th>quantidade_em_uso</th>\n",
-              "      <th>estab_c_eq_sus</th>\n",
+              "      <th>n_estabelecimentos_dispondo</th>\n",
               "      <th>codigo_ibge</th>\n",
               "      <th>city</th>\n",
               "      <th>latitude</th>\n",
@@ -722,7 +724,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 18
         }
       ]
     },
@@ -741,10 +743,10 @@
       "metadata": {
         "id": "QCLdDJ_s3AN8",
         "colab_type": "code",
-        "outputId": "70da23f9-ab0c-43de-ad6d-16a7e1d8573d",
+        "outputId": "d5a84174-cff1-4747-d839-e9d1e320a705",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 107
+          "height": 124
         }
       },
       "source": [
@@ -752,7 +754,7 @@
         "respiradores.replace(np.nan, 0, inplace = True)\n",
         "respiradores.head(2)"
       ],
-      "execution_count": 9,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -778,7 +780,7 @@
               "      <th></th>\n",
               "      <th>quantidade_existente</th>\n",
               "      <th>quantidade_em_uso</th>\n",
-              "      <th>estab_c_eq_sus</th>\n",
+              "      <th>n_estabelecimentos_dispondo</th>\n",
               "      <th>codigo_ibge</th>\n",
               "      <th>city</th>\n",
               "      <th>latitude</th>\n",
@@ -827,7 +829,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 19
         }
       ]
     },
