--- a/1.Quantidade-de-leitos-para-internacao-existentes-por-municipio/Leitos_Internacao_Municipios.ipynb
+++ b/1.Quantidade-de-leitos-para-internacao-existentes-por-municipio/Leitos_Internacao_Municipios.ipynb
@@ -76,15 +76,15 @@
       "metadata": {
         "id": "ystQ5QaFvhkr",
         "colab_type": "code",
-        "outputId": "3cfb4dd1-e97f-41c6-da87-c30939e0b8bd",
+        "outputId": "a7d6d3f6-4a21-47b3-9dad-da8635856ad1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
         }
       },
       "source": [
-        "leitos_internacao = pd.read_csv(\"https://raw.githubusercontent.com/fraterno20/fraterno20-python-notebooks/master/Dataset/Dados-Primarios/leitos_por_cidade.csv\", sep = \";\", encoding = \"iso-8859-1\")\n",
-        "leitos_internacao.rename(columns = {\"municipio\":\"city\"}, inplace = True)\n",
+        "leitos_internacao = pd.read_csv(\"https://raw.githubusercontent.com/fraterno20/fraterno20-python-notebooks/master/Dataset/Dados-Primarios/leitos_internacao.csv\", sep = \";\", encoding = \"iso-8859-1\")\n",
+        "leitos_internacao.columns = [\"city\",\"quantidade\",\"quantidade_sus\",\"quantidade_nao_sus\"]\n",
         "leitos_internacao.head(2)"
       ],
       "execution_count": 2,
@@ -113,6 +113,8 @@
               "      <th></th>\n",
               "      <th>city</th>\n",
               "      <th>quantidade</th>\n",
+              "      <th>quantidade_sus</th>\n",
+              "      <th>quantidade_nao_sus</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -120,20 +122,24 @@
               "      <th>0</th>\n",
               "      <td>110001 Alta Floresta D'Oeste</td>\n",
               "      <td>49</td>\n",
+              "      <td>43</td>\n",
+              "      <td>6</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>110037 Alto Alegre dos Parecis</td>\n",
               "      <td>16</td>\n",
+              "      <td>16</td>\n",
+              "      <td>-</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                             city quantidade\n",
-              "0    110001 Alta Floresta D'Oeste         49\n",
-              "1  110037 Alto Alegre dos Parecis         16"
+              "                             city quantidade quantidade_sus quantidade_nao_sus\n",
+              "0    110001 Alta Floresta D'Oeste         49             43                  6\n",
+              "1  110037 Alto Alegre dos Parecis         16             16                  -"
             ]
           },
           "metadata": {
@@ -158,7 +164,7 @@
       "metadata": {
         "id": "zysl_XG6vwF0",
         "colab_type": "code",
-        "outputId": "65279b68-0044-43e9-8d3a-2f900f7ea5d4",
+        "outputId": "bb34c1dd-0c74-4776-b8bc-91cff906ffb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -250,7 +256,7 @@
       "metadata": {
         "id": "HurIxA8KwvSB",
         "colab_type": "code",
-        "outputId": "720221eb-ae85-4509-f011-02406911fa41",
+        "outputId": "b602ea27-28a7-4e4f-be77-237d8852a797",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -349,7 +355,7 @@
       "metadata": {
         "id": "nNA__eDlxEa2",
         "colab_type": "code",
-        "outputId": "e1f208ab-fc75-409f-a721-d1231c968335",
+        "outputId": "ede4013d-e2ce-4ac5-d67d-1be5d4771260",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -444,7 +450,7 @@
       "metadata": {
         "id": "VYaMJeIxxSEW",
         "colab_type": "code",
-        "outputId": "9ab3aedb-981a-44cf-cec6-757c49a02af3",
+        "outputId": "3e1f8f6f-e90b-4940-bc4c-da4c2bf71e23",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -452,8 +458,8 @@
       },
       "source": [
         "new = leitos_internacao[\"city\"].str.split(\" \", n = 1, expand = True)\n",
-        "leitos_internacao[\"city\"] = new[1]\n",
         "leitos_internacao[\"codigo_ibge\"] = new[0] #Dev sumiu com o ultimo digito de todos os codigos\n",
+        "leitos_internacao.drop(columns=[\"city\"], inplace = True)\n",
         "leitos_internacao.head(2)"
       ],
       "execution_count": 6,
@@ -480,22 +486,25 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>city</th>\n",
               "      <th>quantidade</th>\n",
+              "      <th>quantidade_sus</th>\n",
+              "      <th>quantidade_nao_sus</th>\n",
               "      <th>codigo_ibge</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>Alta Floresta D'Oeste</td>\n",
               "      <td>49</td>\n",
+              "      <td>43</td>\n",
+              "      <td>6</td>\n",
               "      <td>110001</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>Alto Alegre dos Parecis</td>\n",
               "      <td>16</td>\n",
+              "      <td>16</td>\n",
+              "      <td>-</td>\n",
               "      <td>110037</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -503,9 +512,9 @@
               "</div>"
             ],
             "text/plain": [
-              "                      city quantidade codigo_ibge\n",
-              "0    Alta Floresta D'Oeste         49      110001\n",
-              "1  Alto Alegre dos Parecis         16      110037"
+              "  quantidade quantidade_sus quantidade_nao_sus codigo_ibge\n",
+              "0         49             43                  6      110001\n",
+              "1         16             16                  -      110037"
             ]
           },
           "metadata": {
@@ -530,7 +539,7 @@
       "metadata": {
         "id": "Py-SyBds2Gds",
         "colab_type": "code",
-        "outputId": "12a309df-2c1d-4e38-898e-0f4f8ba796dd",
+        "outputId": "e204de43-f6ba-4cfd-d0cc-d8368d9bb686",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -625,14 +634,14 @@
       "metadata": {
         "id": "5pPwGVstzsRE",
         "colab_type": "code",
-        "outputId": "401bac41-7870-4650-f289-bc3317d6a654",
+        "outputId": "b1e55b2b-99c4-41bf-8157-00d08e8ef86c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
         }
       },
       "source": [
-        "leitos_internacao = leitos_internacao.merge(city_lat_long, on = [\"city\",\"codigo_ibge\"], sort = \"city\", how = \"outer\")\n",
+        "leitos_internacao = leitos_internacao.merge(city_lat_long, on = [\"codigo_ibge\"], sort = \"city\", how = \"outer\")\n",
         "leitos_internacao.head(2)"
       ],
       "execution_count": 8,
@@ -659,9 +668,11 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>city</th>\n",
               "      <th>quantidade</th>\n",
+              "      <th>quantidade_sus</th>\n",
+              "      <th>quantidade_nao_sus</th>\n",
               "      <th>codigo_ibge</th>\n",
+              "      <th>city</th>\n",
               "      <th>latitude</th>\n",
               "      <th>longitude</th>\n",
               "      <th>codigo_uf</th>\n",
@@ -671,34 +682,38 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>Abadia de Goiás</td>\n",
               "      <td>-</td>\n",
-              "      <td>520005</td>\n",
-              "      <td>-16.7573</td>\n",
-              "      <td>-49.4412</td>\n",
-              "      <td>52.0</td>\n",
-              "      <td>Goiás</td>\n",
+              "      <td>-</td>\n",
+              "      <td>-</td>\n",
+              "      <td>000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>Abadia dos Dourados</td>\n",
-              "      <td>17</td>\n",
-              "      <td>310010</td>\n",
-              "      <td>-18.4831</td>\n",
-              "      <td>-47.3916</td>\n",
-              "      <td>31.0</td>\n",
-              "      <td>Minas Gerais</td>\n",
+              "      <td>-</td>\n",
+              "      <td>-</td>\n",
+              "      <td>-</td>\n",
+              "      <td>110000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                  city quantidade  ... codigo_uf         state\n",
-              "0      Abadia de Goiás          -  ...      52.0         Goiás\n",
-              "1  Abadia dos Dourados         17  ...      31.0  Minas Gerais\n",
+              "  quantidade quantidade_sus quantidade_nao_sus  ... longitude codigo_uf  state\n",
+              "0          -              -                  -  ...       NaN       NaN    NaN\n",
+              "1          -              -                  -  ...       NaN       NaN    NaN\n",
               "\n",
-              "[2 rows x 7 columns]"
+              "[2 rows x 9 columns]"
             ]
           },
           "metadata": {
@@ -707,6 +722,29 @@
           "execution_count": 8
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "98oRdWOjbyZn",
+        "colab_type": "text"
+      },
+      "source": [
+        "Apagando linha onde tem nulo em state"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "60RC6iZnbnYD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "leitos_internacao.dropna(subset=[\"state\"], inplace = True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -723,17 +761,18 @@
       "metadata": {
         "id": "QCLdDJ_s3AN8",
         "colab_type": "code",
+        "outputId": "52782591-a70b-415c-9fc0-e8bc7414db7c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
-        },
-        "outputId": "bf721673-a6b3-4bbf-ba24-ef14b98da95a"
+        }
       },
       "source": [
         "leitos_internacao.replace(\"-\", 0, inplace = True)\n",
+        "leitos_internacao.replace(np.nan, 0, inplace = True)\n",
         "leitos_internacao.head(2)"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -757,9 +796,11 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>city</th>\n",
               "      <th>quantidade</th>\n",
+              "      <th>quantidade_sus</th>\n",
+              "      <th>quantidade_nao_sus</th>\n",
               "      <th>codigo_ibge</th>\n",
+              "      <th>city</th>\n",
               "      <th>latitude</th>\n",
               "      <th>longitude</th>\n",
               "      <th>codigo_uf</th>\n",
@@ -768,41 +809,45 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>Abadia de Goiás</td>\n",
-              "      <td>0</td>\n",
-              "      <td>520005</td>\n",
-              "      <td>-16.7573</td>\n",
-              "      <td>-49.4412</td>\n",
-              "      <td>52.0</td>\n",
-              "      <td>Goiás</td>\n",
+              "      <th>2</th>\n",
+              "      <td>49</td>\n",
+              "      <td>43</td>\n",
+              "      <td>6</td>\n",
+              "      <td>110001</td>\n",
+              "      <td>Alta Floresta D'Oeste</td>\n",
+              "      <td>-11.92830</td>\n",
+              "      <td>-61.9953</td>\n",
+              "      <td>11.0</td>\n",
+              "      <td>Rondônia</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>Abadia dos Dourados</td>\n",
-              "      <td>17</td>\n",
-              "      <td>310010</td>\n",
-              "      <td>-18.4831</td>\n",
-              "      <td>-47.3916</td>\n",
-              "      <td>31.0</td>\n",
-              "      <td>Minas Gerais</td>\n",
+              "      <th>3</th>\n",
+              "      <td>240</td>\n",
+              "      <td>135</td>\n",
+              "      <td>105</td>\n",
+              "      <td>110002</td>\n",
+              "      <td>Ariquemes</td>\n",
+              "      <td>-9.90571</td>\n",
+              "      <td>-63.0325</td>\n",
+              "      <td>11.0</td>\n",
+              "      <td>Rondônia</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                  city quantidade  ... codigo_uf         state\n",
-              "0      Abadia de Goiás          0  ...      52.0         Goiás\n",
-              "1  Abadia dos Dourados         17  ...      31.0  Minas Gerais\n",
+              "  quantidade quantidade_sus quantidade_nao_sus  ... longitude codigo_uf     state\n",
+              "2         49             43                  6  ...  -61.9953      11.0  Rondônia\n",
+              "3        240            135                105  ...  -63.0325      11.0  Rondônia\n",
               "\n",
-              "[2 rows x 7 columns]"
+              "[2 rows x 9 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
