--- a/1.Quantidade-de-leitos-para-internacao-existentes-por-municipio/Leitos_Internacao_Municipios.ipynb
+++ b/1.Quantidade-de-leitos-para-internacao-existentes-por-municipio/Leitos_Internacao_Municipios.ipynb
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "ystQ5QaFvhkr",
         "colab_type": "code",
-        "outputId": "a7d6d3f6-4a21-47b3-9dad-da8635856ad1",
+        "outputId": "ad071f7a-96ee-4d5e-8ba5-3d7f4af87246",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -84,10 +84,10 @@
       },
       "source": [
         "leitos_internacao = pd.read_csv(\"https://raw.githubusercontent.com/fraterno20/fraterno20-python-notebooks/master/Dataset/Dados-Primarios/leitos_internacao.csv\", sep = \";\", encoding = \"iso-8859-1\")\n",
-        "leitos_internacao.columns = [\"city\",\"quantidade\",\"quantidade_sus\",\"quantidade_nao_sus\"]\n",
+        "leitos_internacao.columns = [\"city\",\"leitos_internacao_total\",\"leitos_internacao_sus\",\"leitos_internacao_nao_sus\"]\n",
         "leitos_internacao.head(2)"
       ],
-      "execution_count": 2,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -112,9 +112,9 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>city</th>\n",
-              "      <th>quantidade</th>\n",
-              "      <th>quantidade_sus</th>\n",
-              "      <th>quantidade_nao_sus</th>\n",
+              "      <th>leitos_internacao_total</th>\n",
+              "      <th>leitos_internacao_sus</th>\n",
+              "      <th>leitos_internacao_nao_sus</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -137,15 +137,17 @@
               "</div>"
             ],
             "text/plain": [
-              "                             city quantidade quantidade_sus quantidade_nao_sus\n",
-              "0    110001 Alta Floresta D'Oeste         49             43                  6\n",
-              "1  110037 Alto Alegre dos Parecis         16             16                  -"
+              "                             city  ... leitos_internacao_nao_sus\n",
+              "0    110001 Alta Floresta D'Oeste  ...                         6\n",
+              "1  110037 Alto Alegre dos Parecis  ...                         -\n",
+              "\n",
+              "[2 rows x 4 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 13
         }
       ]
     },
@@ -164,7 +166,7 @@
       "metadata": {
         "id": "zysl_XG6vwF0",
         "colab_type": "code",
-        "outputId": "bb34c1dd-0c74-4776-b8bc-91cff906ffb8",
+        "outputId": "cef4e6c5-5c76-498c-9c83-d1fc9d26ad19",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -176,7 +178,7 @@
         "city_lat_long.rename(columns = {\"nome\":\"city\"},inplace = True)\n",
         "city_lat_long.head(2)"
       ],
-      "execution_count": 3,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +239,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 14
         }
       ]
     },
@@ -256,7 +258,7 @@
       "metadata": {
         "id": "HurIxA8KwvSB",
         "colab_type": "code",
-        "outputId": "b602ea27-28a7-4e4f-be77-237d8852a797",
+        "outputId": "8eec562c-2e8f-4a03-eda5-a6dabd0211ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -268,7 +270,7 @@
         "data_ibge.rename(columns = {\"Nome_Município\":\"city\",\"Nome_UF\":\"state\",\"UF\":\"codigo_uf\",\"Código Município Completo\":\"codigo_ibge\"},inplace = True)\n",
         "data_ibge.head(2)"
       ],
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -326,7 +328,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 15
         }
       ]
     },
@@ -355,7 +357,7 @@
       "metadata": {
         "id": "nNA__eDlxEa2",
         "colab_type": "code",
-        "outputId": "ede4013d-e2ce-4ac5-d67d-1be5d4771260",
+        "outputId": "9b5a1f60-a649-48fc-b5c7-e63294969cfc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -365,7 +367,7 @@
         "city_lat_long = city_lat_long.merge(data_ibge, on = [\"city\",\"codigo_ibge\",\"codigo_uf\"],sort = \"city\")\n",
         "city_lat_long.head(2)"
       ],
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +433,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 16
         }
       ]
     },
@@ -450,7 +452,7 @@
       "metadata": {
         "id": "VYaMJeIxxSEW",
         "colab_type": "code",
-        "outputId": "3e1f8f6f-e90b-4940-bc4c-da4c2bf71e23",
+        "outputId": "f686c758-2a02-451e-c9bc-0be2a426f705",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -462,7 +464,7 @@
         "leitos_internacao.drop(columns=[\"city\"], inplace = True)\n",
         "leitos_internacao.head(2)"
       ],
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -486,9 +488,9 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>quantidade</th>\n",
-              "      <th>quantidade_sus</th>\n",
-              "      <th>quantidade_nao_sus</th>\n",
+              "      <th>leitos_internacao_total</th>\n",
+              "      <th>leitos_internacao_sus</th>\n",
+              "      <th>leitos_internacao_nao_sus</th>\n",
               "      <th>codigo_ibge</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -512,15 +514,17 @@
               "</div>"
             ],
             "text/plain": [
-              "  quantidade quantidade_sus quantidade_nao_sus codigo_ibge\n",
-              "0         49             43                  6      110001\n",
-              "1         16             16                  -      110037"
+              "  leitos_internacao_total  ... codigo_ibge\n",
+              "0                      49  ...      110001\n",
+              "1                      16  ...      110037\n",
+              "\n",
+              "[2 rows x 4 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 17
         }
       ]
     },
@@ -539,7 +543,7 @@
       "metadata": {
         "id": "Py-SyBds2Gds",
         "colab_type": "code",
-        "outputId": "e204de43-f6ba-4cfd-d0cc-d8368d9bb686",
+        "outputId": "c9b9a656-0b0f-4a73-a7a0-ee467a474ece",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -549,7 +553,7 @@
         "city_lat_long[\"codigo_ibge\"] = city_lat_long[\"codigo_ibge\"].map(lambda x: str(x)[:-1])\n",
         "city_lat_long.head(2)"
       ],
-      "execution_count": 7,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -615,7 +619,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 18
         }
       ]
     },
@@ -634,7 +638,7 @@
       "metadata": {
         "id": "5pPwGVstzsRE",
         "colab_type": "code",
-        "outputId": "b1e55b2b-99c4-41bf-8157-00d08e8ef86c",
+        "outputId": "e760f63e-8203-4606-8825-f6e17d12d1fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -644,7 +648,7 @@
         "leitos_internacao = leitos_internacao.merge(city_lat_long, on = [\"codigo_ibge\"], sort = \"city\", how = \"outer\")\n",
         "leitos_internacao.head(2)"
       ],
-      "execution_count": 8,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,9 +672,9 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>quantidade</th>\n",
-              "      <th>quantidade_sus</th>\n",
-              "      <th>quantidade_nao_sus</th>\n",
+              "      <th>leitos_internacao_total</th>\n",
+              "      <th>leitos_internacao_sus</th>\n",
+              "      <th>leitos_internacao_nao_sus</th>\n",
               "      <th>codigo_ibge</th>\n",
               "      <th>city</th>\n",
               "      <th>latitude</th>\n",
@@ -709,9 +713,9 @@
               "</div>"
             ],
             "text/plain": [
-              "  quantidade quantidade_sus quantidade_nao_sus  ... longitude codigo_uf  state\n",
-              "0          -              -                  -  ...       NaN       NaN    NaN\n",
-              "1          -              -                  -  ...       NaN       NaN    NaN\n",
+              "  leitos_internacao_total leitos_internacao_sus  ... codigo_uf state\n",
+              "0                       -                     -  ...       NaN   NaN\n",
+              "1                       -                     -  ...       NaN   NaN\n",
               "\n",
               "[2 rows x 9 columns]"
             ]
@@ -719,7 +723,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 19
         }
       ]
     },
@@ -761,7 +765,7 @@
       "metadata": {
         "id": "QCLdDJ_s3AN8",
         "colab_type": "code",
-        "outputId": "52782591-a70b-415c-9fc0-e8bc7414db7c",
+        "outputId": "df67a683-d8c6-4694-b1c1-8a9cc8926081",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -772,7 +776,7 @@
         "leitos_internacao.replace(np.nan, 0, inplace = True)\n",
         "leitos_internacao.head(2)"
       ],
-      "execution_count": 10,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -796,9 +800,9 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>quantidade</th>\n",
-              "      <th>quantidade_sus</th>\n",
-              "      <th>quantidade_nao_sus</th>\n",
+              "      <th>leitos_internacao_total</th>\n",
+              "      <th>leitos_internacao_sus</th>\n",
+              "      <th>leitos_internacao_nao_sus</th>\n",
               "      <th>codigo_ibge</th>\n",
               "      <th>city</th>\n",
               "      <th>latitude</th>\n",
@@ -837,9 +841,9 @@
               "</div>"
             ],
             "text/plain": [
-              "  quantidade quantidade_sus quantidade_nao_sus  ... longitude codigo_uf     state\n",
-              "2         49             43                  6  ...  -61.9953      11.0  Rondônia\n",
-              "3        240            135                105  ...  -63.0325      11.0  Rondônia\n",
+              "  leitos_internacao_total leitos_internacao_sus  ... codigo_uf     state\n",
+              "2                      49                    43  ...      11.0  Rondônia\n",
+              "3                     240                   135  ...      11.0  Rondônia\n",
               "\n",
               "[2 rows x 9 columns]"
             ]
@@ -847,7 +851,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 21
         }
       ]
     },
